--- a/post.html
+++ b/post.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>PWE - Wedding & Event Planner</title>
+    <title>Yes Honey Proposals</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <link rel="stylesheet" href="css/animate.css">
@@ -25,7 +25,7 @@
         <aside id="pwe-aside">
             <!-- Logo -->
             <h1 id="pwe-logo">
-                <a href="index.html">PWE<i>®</i><span>weddings <small>&#8226;</small> events</span></a>
+                <a href="#"><img src="images/logo.jpg" alt=""></a>
             </h1>
             <!-- Menu -->
             <nav id="pwe-main-menu">
@@ -34,6 +34,7 @@
                     <li><a href="index.html#about">About</a></li>
                     <li><a href="index.html#services">Services</a></li>
                     <li><a href="index.html#portfolio">Portfolio</a></li>
+                    <li><a href="index.html#portfolio">Testimonials</a></li>
                     <li><a href="index.html#blog">Blog</a></li>
                     <li><a href="index.html#contact">Contact</a></li>
                 </ul>
@@ -41,9 +42,9 @@
             <!-- Sidebar Footer -->
             <div class="pwe-footer">
                 <div class="separator"></div>
-                <p>+1.123.444.0000
-                    <br />info@pweddings.com</p>
-                <div class="social"> <a href="#"><i class="ti-facebook"></i></a> <a href="#"><i class="ti-twitter-alt"></i></a> <a href="#"><i class="ti-instagram"></i></a> <a href="#"><i class="ti-pinterest"></i></a> </div>
+                <p>+1.330.389.0592
+                    <br />rue@yeshoneyproposals.com</p>
+                <div class="social"> <a href="#"><i class="ti-facebook"></i></a> <a href="#"><i class="ti-instagram"></i></a> </div>
             </div>
         </aside>
         <!-- Main Section -->
@@ -149,8 +150,8 @@
                     </div>
                 </div>
             </div>
-            <!-- Clients -->
-            <div class="clients-section clients">
+          <!-- Clients -->
+        <!--    <div class="clients-section clients">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-12 owl-carousel owl-theme">
@@ -181,38 +182,38 @@
                 <div class="pwe-narrow-content">
                     <div class="row">
                         <div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-                            <h2>
-                                <a href="index.html">PWE<i>®</i><span>weddings <small>•</small> events</span></a>
-                            </h2>
-                            <div class="social"> <a href="#"><i class="ti-facebook"></i></a> <a href="#"><i class="ti-twitter-alt"></i></a> <a href="#"><i class="ti-instagram"></i></a> <a href="#"><i class="ti-pinterest"></i></a> </div>
+                           
+                                <a href="#"><img src="images/logo-black.jpg" alt=""></a>
+                            <br><br>
+                            
                         </div>
                         <div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
                             <h6>Ring</h6>
-                            <p>+1.123.444.0000</p>
+                            <p>+1.330.389.0592</p>
                             <h6>Write</h6>
-                            <p>info@pweddings.com</p>
+                            <p>rue@yeshoneyproposals.com</p>
                         </div>
                         <div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
                             <h6>Address</h6>
-                            <p>Wallaway 5st St Normain
-                                <br />New York, USA. 98499</p>
-                            <p class="copyright">&copy; 2020. All rights reserved.</p>
+                            <p>301 Sw 3rd Ct
+                                <br />Renton, WA   98057</p>
+                            <p class="copyright">&copy;2021. All rights reserved. <br>Site designed by Caffeine &amp; Anxiety</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- jQuery -->
+        <script src="js/jquery.min.js"></script>
+        <script src="js/modernizr-2.6.2.min.js"></script>
+        <script src="js/jquery.easing.1.3.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/jquery.waypoints.min.js"></script>
+        <script src="js/jquery.flexslider-min.js"></script>
+        <script src="js/sticky-kit.min.js"></script>
+        <script src="js/jquery.magnific-popup.min.js"></script>
+        <script src="js/owl.carousel.min.js"></script>
+        <script src="js/main.js"></script>
     </div>
-    <!-- jQuery -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/modernizr-2.6.2.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/jquery.flexslider-min.js"></script>
-    <script src="js/sticky-kit.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/main.js"></script>
 </body>
 </html>
