--- a/futureindex.html
+++ b/futureindex.html
@@ -61,10 +61,10 @@
                                     <div class="col-md-6 js-fullheight slider-text">
                                         <div class="slider-text-inner">
                                             <div class="desc">
-                                                <h6>dream wedding</h6>
-                                                <h1>To Know Us is to Love Us!</h1>
-                                                <p>We would love to meet up and chat about how we can make YOUR DREAM wedding happen!</p>
-                                                <div class="btn-contact"><a href="#"><span>See Our Work</span></a></div>
+                                                <h6>Date night</h6>
+                                                <h1>Let's plan the perfect night!</h1>
+                                                <p>I'd love to meet up and chat about how I can help create the perfect night for your loved one and you!</p>
+                                                <div class="btn-contact"><a href="#"><span>See My Services</span></a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -131,8 +131,8 @@
             <div id="services" class="services clear pt-90 pb-90 bg-pink">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-md-12 mb-30"> <span class="heading-meta">weddings . events</span> 
-                            <h2 class="pwe-heading animate-box" data-animate-effect="fadeInLeft">Our Services</h2>
+                        <div class="col-md-12 mb-30"> <span class="heading-meta">dates, proposals &amp; more!</span> 
+                            <h2 class="pwe-heading animate-box" data-animate-effect="fadeInLeft">My Services</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -259,8 +259,8 @@
             <div id="portfolio" class="portfolio pt-90 pb-60 bg-white">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-md-12 mb-30"> <span class="heading-meta">new works</span>
-                            <h2 class="pwe-heading mb-30 animate-box" data-animate-effect="fadeInLeft">Our Portfolio</h2>
+                        <div class="col-md-12 mb-30"> <span class="heading-meta">Recent work</span>
+                            <h2 class="pwe-heading mb-30 animate-box" data-animate-effect="fadeInLeft">Gallery</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -316,6 +316,33 @@
                                     <h5><a href="portfolio-page.html">Tammy <b>&</b> Matthew</a></h5> </div>
                             </div>
                         </div>
+						  <div class="col-md-4">
+                            <div class="item animate-box" data-animate-effect="fadeInLeft">
+                                <div class="portfolio-img">
+                                    <a href="portfolio-page.html"><img src="images/520x400.jpg" alt=""></a>
+                                </div>
+                                <div class="content">
+                                    <h5><a href="portfolio-page.html">Tammy <b>&</b> Matthew</a></h5> </div>
+                            </div>
+                        </div>
+						  <div class="col-md-4">
+                            <div class="item animate-box" data-animate-effect="fadeInLeft">
+                                <div class="portfolio-img">
+                                    <a href="portfolio-page.html"><img src="images/520x400.jpg" alt=""></a>
+                                </div>
+                                <div class="content">
+                                    <h5><a href="portfolio-page.html">Tammy <b>&</b> Matthew</a></h5> </div>
+                            </div>
+                        </div>
+						  <div class="col-md-4">
+                            <div class="item animate-box" data-animate-effect="fadeInLeft">
+                                <div class="portfolio-img">
+                                    <a href="portfolio-page.html"><img src="images/520x400.jpg" alt=""></a>
+                                </div>
+                                <div class="content">
+                                    <h5><a href="portfolio-page.html">Tammy <b>&</b> Matthew</a></h5> </div>
+                            </div>
+                        </div>
  
                     </div>
                 </div>
@@ -324,8 +351,8 @@
             <div class="testimonials pt-90 pb-90 bg-img bg-fixed" data-overlay-dark="5" data-background="images/testimonials.jpg">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="section-head col-md-5"> <span>testiominals</span>
-                            <h4>From our clients</h4>
+                        <div class="section-head col-md-5"> <span>Testiominals</span>
+                            <h4>From happy clients</h4>
                             <p>We are always eager to hear your opinion and share your experience. Here you can find some of our affectionate customers opinions.</p>
                         </div>
                         <div class="owl-carousel owl-theme col-md-7">
@@ -370,8 +397,8 @@
             <div id="blog" class="blog pt-90 pb-90 bg-pink">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-md-12 mb-30"> <span class="heading-meta">read news</span>
-                            <h2 class="pwe-heading animate-box" data-animate-effect="fadeInLeft">Latest News</h2>
+                        <div class="col-md-12 mb-30"> <span class="heading-meta">Keep up to date</span>
+                            <h2 class="pwe-heading animate-box" data-animate-effect="fadeInLeft">My Blog</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -427,8 +454,8 @@
             <div id="contact" class="pt-90 pb-90">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-md-12 mb-30"> <span class="heading-meta">location</span>
-                            <h2 class="pwe-heading animate-box" data-animate-effect="fadeInLeft">Contact Us</h2>
+                        <div class="col-md-12 mb-30"> <span class="heading-meta">How to connect</span>
+                            <h2 class="pwe-heading animate-box" data-animate-effect="fadeInLeft">Contact Rue</h2>
                         </div>
                     </div>
                     <div class="row">
