Content changes to show Rue

--- a/futureindex.html
+++ b/futureindex.html
@@ -78,10 +78,10 @@
                                     <div class="col-md-6 js-fullheight slider-text">
                                         <div class="slider-text-inner">
                                             <div class="desc">
-                                                <h6>dream maker</h6>
+                                                <h6>Dream proposal</h6>
                                                 <h1>Your Personal Dream Maker</h1>
-                                                <p>We believe that it is all about the BIG DREAMS and the small details!</p>
-                                                <div class="btn-contact"><a href="#"><span>See Our Work</span></a></div>
+                                                <p>I'll take care of all the details and make your dream proposal a reality!</p>
+                                                <div class="btn-contact"><a href="#"><span>See My Work</span></a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -95,10 +95,10 @@
                                     <div class="col-md-6 js-fullheight slider-text">
                                         <div class="slider-text-inner">
                                             <div class="desc">
-                                                <h6>planing dream</h6>
-                                                <h1>Destination Wedding Planner</h1>
-                                                <p>No matter your dreams - we can assist you in planning your PWE WEDDINGS & EVENTS.</p>
-                                                <div class="btn-contact"><a href="#"><span>See Our Work</span></a></div>
+                                                <h6>Epic party</h6>
+                                                <h1>Plan an event for everyone</h1>
+                                                <p>No matter your dreams I can help plan the perfect event!</p>
+                                                <div class="btn-contact"><a href="#"><span>See My Work</span></a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -142,24 +142,24 @@
                                     <div class="position-re o-hidden"> <img src="images/600x750.jpg" alt=""> </div>
                                     <div class="con"> 
                                         <span class="category">
-                                            <a href="services-page.html">. weddings</a>
+                                            <a href="services-page.html">The perfect date</a>
                                         </span>
-                                        <h5><a href="services-page.html">WEDDING PLANNER</a></h5> 
+                                        <h5><a href="services-page.html">DATE PLANNING</a></h5> 
                                         <a href="services-page.html"><i class="ti-arrow-right"></i></a>
                                     </div>
                                 </div>
                                 <div class="item">
                                     <div class="position-re o-hidden"> <img src="images/600x750.jpg" alt=""> </div>
                                     <div class="con"> <span class="category">
-                                            <a href="services-page.html">. weddings</a>
+                                            <a href="services-page.html">Pop the question</a>
                                         </span>
-                                        <h5><a href="services-page.html">MASTER OF CEREMONIES</a></h5> <a href="services-page.html"><i class="ti-arrow-right"></i></a>
+                                        <h5><a href="services-page.html">PROPOSAL PLANNING</a></h5> <a href="services-page.html"><i class="ti-arrow-right"></i></a>
                                     </div>
                                 </div>
                                 <div class="item">
                                     <div class="position-re o-hidden"> <img src="images/600x750.jpg" alt=""> </div>
                                     <div class="con"> <span class="category">
-                                            <a href="services-page.html">. events</a>
+                                            <a href="services-page.html">Magical events</a>
                                         </span>
                                         <h5><a href="services-page.html">SPECIAL EVENTS</a></h5> <a href="services-page.html"><i class="ti-arrow-right"></i></a>
                                     </div>
@@ -167,7 +167,7 @@
                                 <div class="item">
                                     <div class="position-re o-hidden"> <img src="images/600x750.jpg" alt=""> </div>
                                     <div class="con"> <span class="category">
-                                            <a href="services-page.html">. weddings</a>
+                                            <a href="services-page.html">weddings</a>
                                         </span>
                                         <h5><a href="services-page.html">DESTINATION WEDDING</a></h5> <a href="services-page.html"><i class="ti-arrow-right"></i></a>
                                     </div>
@@ -175,7 +175,7 @@
                                 <div class="item">
                                     <div class="position-re o-hidden"> <img src="images/600x750.jpg" alt=""> </div>
                                     <div class="con"> <span class="category">
-                                            <a href="services-page.html">. events</a>
+                                            <a href="services-page.html">events</a>
                                         </span>
                                         <h5><a href="services-page.html">BIRTHDAY PARTY PLANNER</a></h5> <a href="services-page.html"><i class="ti-arrow-right"></i></a>
                                     </div>
@@ -183,7 +183,7 @@
                                 <div class="item">
                                     <div class="position-re o-hidden"> <img src="images/600x750.jpg" alt=""> </div>
                                     <div class="con"> <span class="category">
-                                            <a href="services-page.html">. events</a>
+                                            <a href="services-page.html">events</a>
                                         </span>
                                         <h5><a href="services-page.html">CORPORATE EVENTS</a></h5> <a href="services-page.html"><i class="ti-arrow-right"></i></a>
                                     </div>
@@ -270,7 +270,7 @@
                                     <a href="portfolio-page.html"><img src="images/520x400.jpg" alt=""></a>
                                 </div>
                                 <div class="content">
-                                    <h5><a href="portfolio-page.html">Eleanor <b>&</b> Stefano</a></h5> </div>
+                                    <h5><a href="portfolio-page.html">Image Description</a></h5> </div>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -279,7 +279,7 @@
                                     <a href="portfolio-page.html"><img src="images/520x400.jpg" alt=""></a>
                                 </div>
                                 <div class="content">
-                                    <h5><a href="portfolio-page.html">Freida <b>&</b> Pablo</a></h5> </div>
+                                    <h5><a href="portfolio-page.html">Image Description</a></h5> </div>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -288,7 +288,7 @@
                                     <a href="portfolio-page.html"><img src="images/520x400.jpg" alt=""></a>
                                 </div>
                                 <div class="content">
-                                    <h5><a href="portfolio-page.html">Olivia <b>&</b> Enrico</a></h5> </div>
+                                    <h5><a href="portfolio-page.html">Image Description</a></h5> </div>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -297,14 +297,14 @@
                                     <a href="portfolio-page.html"><img src="images/520x400.jpg" alt=""></a>
                                 </div>
                                 <div class="content">
-                                    <h5><a href="portfolio-page.html">Maddie <b>&</b> Daniel</a></h5> </div>
+                                    <h5><a href="portfolio-page.html">Image Description</a></h5> </div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="item animate-box" data-animate-effect="fadeInLeft">
                                 <div class="portfolio-img"> <img src="images/520x400.jpg" alt=""> </div>
                                 <div class="content">
-                                    <h5><a href="portfolio-page.html">Vanessa <b>&</b> Chris</a></h5> </div>
+                                    <h5><a href="portfolio-page.html">Image Description</a></h5> </div>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -313,7 +313,7 @@
                                     <a href="portfolio-page.html"><img src="images/520x400.jpg" alt=""></a>
                                 </div>
                                 <div class="content">
-                                    <h5><a href="portfolio-page.html">Tammy <b>&</b> Matthew</a></h5> </div>
+                                    <h5><a href="portfolio-page.html">Image Description</a></h5> </div>
                             </div>
                         </div>
 						  <div class="col-md-4">
@@ -322,7 +322,7 @@
                                     <a href="portfolio-page.html"><img src="images/520x400.jpg" alt=""></a>
                                 </div>
                                 <div class="content">
-                                    <h5><a href="portfolio-page.html">Tammy <b>&</b> Matthew</a></h5> </div>
+                                    <h5><a href="portfolio-page.html">Image Description</a></h5> </div>
                             </div>
                         </div>
 						  <div class="col-md-4">
@@ -331,7 +331,7 @@
                                     <a href="portfolio-page.html"><img src="images/520x400.jpg" alt=""></a>
                                 </div>
                                 <div class="content">
-                                    <h5><a href="portfolio-page.html">Tammy <b>&</b> Matthew</a></h5> </div>
+                                    <h5><a href="portfolio-page.html">Image Description</a></h5> </div>
                             </div>
                         </div>
 						  <div class="col-md-4">
@@ -340,7 +340,7 @@
                                     <a href="portfolio-page.html"><img src="images/520x400.jpg" alt=""></a>
                                 </div>
                                 <div class="content">
-                                    <h5><a href="portfolio-page.html">Tammy <b>&</b> Matthew</a></h5> </div>
+                                    <h5><a href="portfolio-page.html">Image Description</a></h5> </div>
                             </div>
                         </div>
  
