--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -56,8 +56,8 @@
                     <div class="banner-head-padding banner-head-margin">
                         <div class="container-fluid">
                             <div class="row">
-                                <div class="col-md-12"> <span class="heading-meta">.portfolio</span>
-                                    <h2 class="pwe-heading animate-box" data-animate-effect="fadeInLeft">Eleanor & Stefano</h2> </div>
+                                <div class="col-md-12"> <span class="heading-meta">Recent work</span>
+                                    <h2 class="pwe-heading animate-box" data-animate-effect="fadeInLeft">A beautiful night out</h2> </div>
                             </div>
                         </div>
                     </div>
@@ -70,11 +70,7 @@
                         <div class="col-md-8 animate-box" data-animate-effect="fadeInLeft">
                             <p>Quality vestibulum mollis accumsan ultricies. Sed urna velit, maximus eu tellus sit amet, condimentum dictum erat. Sed dolor ipsum, luctus quis est eu, vestibulum tincidunt est. Donec egestas aliquet nunc, ac egestas sapien fermentum in. Sed volutpat ac mi faucibus convallis. Praesent facilisis lobortis tellus. Donec laoreet, erat in sagittis dictum, enim enim dignissim sapien.</p>
                         </div>
-                        <div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-                            <p><b>Wedding Planner :</b> Rachel Starletta
-                                <br> <b>Wedding Photographer :</b> Janet Lewis
-                                <br> <b>Location :</b> Lakewood WA, USA </p>
-                        </div>
+                        
                     </div>
                     <!-- Gallery -->
                     <div class="row mb-60">
