--- a/post.html
+++ b/post.html
@@ -56,8 +56,8 @@
                     <div class="banner-head-padding banner-head-margin">
                         <div class="container-fluid">
                             <div class="row">
-                                <div class="col-md-12"> <span class="heading-meta">wedding</span>
-                                    <h2 class="pwe-heading animate-box" data-animate-effect="fadeInLeft">Crush Your Wedding Day Style!</h2>
+                                <div class="col-md-12"> <span class="heading-meta">From the blog</span>
+                                    <h2 class="pwe-heading animate-box" data-animate-effect="fadeInLeft">A tail about an epic date!</h2>
                                 </div>
                             </div>
                         </div>
@@ -80,7 +80,7 @@
                     <div class="row">
                         <div class="col-md-12 col-sm-12 animate-box" data-animate-effect="fadeInLeft">
                             <!-- Comments -->
-                            <div class="clear" id="comment-list">
+                          <!--  <div class="clear" id="comment-list">
                                 <div class="comments-area" id="comments">
                                     <h2 class="comments-title">Comments</h2>
                                     <ol class="comment-list">
@@ -94,7 +94,7 @@
                                                 <div class="reply"> <a href="#" class="comment-reply-link"><i class="ti-back-left"></i> Replay</a> </div>
                                             </div>
                                             <!-- sub comment block -->
-                                            <ol class="children">
+                                    <!--        <ol class="children">
                                                 <li class="comment odd parent">
                                                     <div class="comment-body">
                                                         <div class="comment-author vcard"> <img class="avatar photo" src="images/300x300.jpg" alt="">
@@ -109,7 +109,7 @@
                                         </li>
                                         <li class="comment">
                                             <!-- comment block -->
-                                            <div class="comment-body">
+                                    <!--        <div class="comment-body">
                                                 <div class="comment-author vcard"> <img class="avatar photo" src="images/300x300.jpg" alt="">
                                                     <h3 class="name">Cerica Smith</h3>
                                                 </div>
@@ -126,7 +126,7 @@
                     <div class="row">
                         <div class="col-md-8 animate-box" data-animate-effect="fadeInLeft">
                             <!-- Leave a comments -->
-                            <h3 class="pwe-about-heading">Leave a Comments</h3>
+                       <!--     <h3 class="pwe-about-heading">Leave a Comments</h3>
                             <form method="post" class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group">
