--- a/futureindex.html
+++ b/futureindex.html
@@ -54,7 +54,7 @@
                 <div id="pwe-hero" class="js-fullheight">
                 <div class="flexslider js-fullheight">
                     <ul class="slides">
-                        <li style="background-image: url(images/1920x1280.jpg);">
+                        <li style="background-image: url(images/heroimage-1.jpg);">
                             <div class="overlay"></div>
                             <div class="container-fluid">
                                 <div class="row">
