--- a/futureindex.html
+++ b/futureindex.html
@@ -64,7 +64,7 @@
                                                 <h6>Date night</h6>
                                                 <h1>Let's plan the perfect night!</h1>
                                                 <p>I'd love to meet up and chat about how I can help create the perfect night for your loved one and you!</p>
-                                                <div class="btn-contact"><a href="#"><span>See My Services</span></a></div>
+                                                <div class="btn-contact"><a href="#services"><span>See My Services</span></a></div>
                                             </div>
                                         </div>
                                     </div>
