Remove blog / change footer

--- a/futureindex.html
+++ b/futureindex.html
@@ -394,7 +394,7 @@
                 </div>
             </div>
             <!-- Blog -->
-            <div id="blog" class="blog pt-90 pb-90 bg-pink">
+           <!-- <div id="blog" class="blog pt-90 pb-90 bg-pink">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-12 mb-30"> <span class="heading-meta">Keep up to date</span>
@@ -462,9 +462,9 @@
                         <div class="col-md-6 mb-30 animate-box" data-animate-effect="fadeInLeft">
                             <p>Quisque facilisis libero maximus non.<br>Lolutpat venenatis lacus sed hendrerit nisi.</p>
                             <p><b>Ring</b> — +1.330.389.0592</p>
-                            <p><b>Address</b> — 301 SW 3rd Ct, Renton, WA, USA.</p>
+                           
                             <p><b>Write</b> — rue@yeshoneyproposals.com</p>
-                            <p><b>Visit</b> — by appointment only</p>
+                           
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                                 <p>Don’t be shy, we would love to hear from you!</p>
@@ -539,10 +539,9 @@
                             <p>rue@yeshoneyproposals.com</p>
                         </div>
                         <div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-                            <h6>Address</h6>
-                            <p>301 Sw 3rd Ct
-                                <br />Renton, WA   98057</p>
-                            <p class="copyright">&copy;2021. All rights reserved. <br>Site designed by Caffeine &amp; Anxiety</p>
+                            <h6>Area's Serviced</h6>
+                            <p>Seattle, WA &amp; surrounding area</p>
+                            <p class="copyright"><br>&copy;2021. All rights reserved. <br>Site designed by Caffeine &amp; Anxiety</p>
                         </div>
                     </div>
                 </div>
