--- a/futureindex.html
+++ b/futureindex.html
@@ -164,7 +164,7 @@
                                         <h5><a href="services-page.html">SPECIAL EVENTS</a></h5> <a href="services-page.html"><i class="ti-arrow-right"></i></a>
                                     </div>
                                 </div>
-                                <div class="item">
+                             <!--   <div class="item">
                                     <div class="position-re o-hidden"> <img src="images/600x750.jpg" alt=""> </div>
                                     <div class="con"> <span class="category">
                                             <a href="services-page.html">weddings</a>
@@ -187,7 +187,7 @@
                                         </span>
                                         <h5><a href="services-page.html">CORPORATE EVENTS</a></h5> <a href="services-page.html"><i class="ti-arrow-right"></i></a>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
