--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
             </div>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="seventh nav-link before after scroll" href="#portfolio_top">Gallery</a>
+                    <a class="seventh nav-link before after " href="/gallery.html">Gallery</a>
                 </li>
                
                 <li class="nav-item">
-                    <a class="seventh nav-link before after" href="yoga/blog.html">Testimonials</a>
+                    <a class="seventh nav-link before after" href="/testimonials.html">Testimonials</a>
                 </li>
                 <li class="nav-item">
-                    <a class="seventh nav-link before after" href="yoga/contact-us.html">Connect with Rue</a>
+                    <a class="seventh nav-link before after" href="/connect.html">Connect with Rue</a>
                 </li>
             </ul>
             </div>
@@ -106,9 +106,9 @@
             <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
             <li class="nav-item"><a class="nav-link scroll" href="#about_yoga">About</a></li>
             <li class="nav-item"><a class="nav-link scroll" href="#services">Services</a></li>
-            <li class="nav-item"><a class="nav-link scroll" href="#portfolio_top">Gallery</a></li>
-            <li class="nav-item"><a class="nav-link" href="yoga/prices.html">Testimonials</a></li>
-            <li class="nav-item"><a class="nav-link" href="yoga/contact-us.html">Connect with Rue</a></li>
+            <li class="nav-item"><a class="nav-link" href="/gallery.html">Gallery</a></li>
+            <li class="nav-item"><a class="nav-link" href="/testimonials.html">Testimonials</a></li>
+            <li class="nav-item"><a class="nav-link" href="/connect.html">Connect with Rue</a></li>
         </ul>
         </nav>
     </div>
