So many more changes

--- a/gallery.html
+++ b/gallery.html
@@ -106,7 +106,7 @@
             <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
             <li class="nav-item"><a class="nav-link scroll" href="index.html#about_yoga">About</a></li>
             <li class="nav-item"><a class="nav-link scroll" href="index.html#services">Services</a></li>
-            <li class="nav-item"><a class="nav-link scroll" href="gallery.html">Gallery</a></li>
+            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
             <li class="nav-item"><a class="nav-link" href="testimonials.html">Testimonials</a></li>
             <li class="nav-item"><a class="nav-link" href="connect.html">Connect with Rue</a></li>
         </ul>
