--- a/connect.html
+++ b/connect.html
@@ -103,12 +103,12 @@
         </div>
         <nav class="navbar1">
         <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-            <li class="nav-item"><a class="nav-link scroll" href="#about_yoga">About</a></li>
-            <li class="nav-item"><a class="nav-link scroll" href="#services">Services</a></li>
-            <li class="nav-item"><a class="nav-link scroll" href="#portfolio_top">Gallery</a></li>
-            <li class="nav-item"><a class="nav-link" href="yoga/prices.html">Testimonials</a></li>
-            <li class="nav-item"><a class="nav-link" href="yoga/contact-us.html">Connect with Rue</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link scroll" href="index.html#about_yoga">About</a></li>
+            <li class="nav-item"><a class="nav-link scroll" href="index.html#services">Services</a></li>
+            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+            <li class="nav-item"><a class="nav-link" href="testimonials.html">Testimonials</a></li>
+            <li class="nav-item"><a class="nav-link" href="connect.html">Connect with Rue</a></li>
         </ul>
         </nav>
     </div>
