--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         <h1 class="heading margin_heading wow fadeInUp" data-wow-delay="600ms" data-wow-duration="0.8s" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">I want to help you on your first step to forever.</h1>
                         <p class="info  wow fadeInUp" data-wow-delay="800ms" data-wow-duration="1.3s" style="visibility: visible; animation-delay: 400ms; animation-name: fadeInUp;">During 2020 I realized how much of life can be put on hold or cancelled. Love is not one of them. Proposals, weddings, grand acts of display in the name of love during the pandemic made me realize love can not be cancelled. My wife and I got married in the midst of uncertainty but the one thing that was certain was I want to help other people feel this way. <br><br>A few months later and Yes Honey Proposals was born! I love seeing love stories and I want to help you plan yours!<br><br><span class="mt-3">
                         I'd love to discuss helping you put on a display of love for your partner!</span></p>
-                        <a href="yoga/about-yoga.html" class="btn btn-large btn-primary margin_button  wow fadeInUp" data-wow-delay="900ms" data-wow-duration="1s" style="visibility: visible; animation-delay: 600ms; animation-name: fadeInUp;">Let's Talk!</a>
+                        <a href="connect.html" class="btn btn-large btn-primary margin_button  wow fadeInUp" data-wow-delay="900ms" data-wow-duration="1s" style="visibility: visible; animation-delay: 600ms; animation-name: fadeInUp;">Let's Talk!</a>
                     </div>
                 </div>
             </div>
