--- a/connect.html
+++ b/connect.html
@@ -72,7 +72,7 @@
                
             </ul>
             <div class="logo">
-                <a href="#home" class="scroll"><img src="yoga/img/logo_img.png" alt="Logo Img"></a>
+                <a href="index.html" class="scroll"><img src="yoga/img/logo_img.png" alt="Logo Img"></a>
             </div>
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -207,7 +207,7 @@
             <div class="row">
                 <div class="col-12 text-center">
 							
-			  <div class="logo">
+			  <div class="">
             <a href="#home" class="scroll"><img src="yoga/img/bottom_logo.png" alt="Logo Img"></a><br><br>
         </div>
                     <ul class="footer_ul">
