--- a/connect.html
+++ b/connect.html
@@ -83,7 +83,7 @@
                     <a class="seventh nav-link before after" href="yoga/blog.html">Testimonials</a>
                 </li>
                 <li class="nav-item">
-                    <a class="seventh nav-link before after" href="yoga/contact-us.html">Connect with Rue</a>
+                    <a class="seventh nav-link before after" href="yoga/contact-us.html">Connect</a>
                 </li>
             </ul>
             </div>
