a number of changes

--- a/connect.html
+++ b/connect.html
@@ -45,7 +45,7 @@
     
 
     <div class="logo margin_navbar-logo logo_display">
-        <a href="index-yoga.html">
+        <a href="index.html">
             <img src="yoga/img/logo_img.png" alt="Logo Img"></a>
     </div>
     <div class="my-tog-btn">
