--- a/index.html
+++ b/index.html
@@ -128,51 +128,6 @@
                     <img src="yoga/img/slider_img/banner-1.png"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="off" class="rev-slidebg" data-no-retina>
                     <!-- LAYERS -->
 
-                    <!-- LAYER NR. 4 -->
-                <!--    <div class="tp-caption   tp-resizeme"
-                         id="slide-6-layer-3"
-                         data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-                         data-y="['middle','middle','middle','middle']" data-voffset="['-78','-78','-78','-78']"
-                         data-fontsize="['24','24','24','16']"
-                         data-width="none"
-                         data-height="none"
-                         data-whitespace="nowrap"
-
-                         data-type="text"
-                         data-responsive_offset="on"
-
-                         data-frames='[{"delay":150,"speed":2000,"frame":"0","from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","to":"o:1;","ease":"Power2.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"nothing"}]'
-                         data-textAlign="['inherit','inherit','inherit','inherit']"
-                         data-paddingtop="[0,0,0,0]"
-                         data-paddingright="[0,0,0,0]"
-                         data-paddingbottom="[0,0,0,0]"
-                         data-paddingleft="[0,0,0,0]"
-
-                         style="z-index: 5; white-space: nowrap; font-size: 24px; line-height: 34px; font-weight: 300; color: #ffffff; letter-spacing: 0;font-family:'Open Sans', sans-serif;">I'd love to plan your perfect night! </div>
-
-                    <!-- LAYER NR. 5 -->
-                    <div class="tp-caption   tp-resizeme"
-                         id="slide-6-layer-4"
-                         data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-                         data-y="['middle','middle','middle','middle']" data-voffset="['-150','-150','-150','-150']"
-                         data-fontsize="['72','72','72','50']"
-                         data-fontweight="['300','100','100','100']"
-                         data-width="none"
-                         data-height="none"
-                         data-whitespace="nowrap"
-
-                         data-type="text"
-                         data-responsive_offset="on"
-
-                         data-frames='[{"delay":10,"speed":2000,"frame":"0","from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","to":"o:1;","ease":"Power2.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"nothing"}]'
-                         data-textAlign="['inherit','inherit','inherit','inherit']"
-                         data-paddingtop="[0,0,0,0]"
-                         data-paddingright="[0,0,0,0]"
-                         data-paddingbottom="[0,0,0,0]"
-                         data-paddingleft="[0,0,0,0]"
-
-                         style="z-index: 6; white-space: nowrap; font-size: 72px; line-height: 85px; font-weight: 600; color: #ffffff; letter-spacing: 0;font-family:'Raleway', sans-serif;">Let's plan your <br>steps to forever!</div>
-
                     <!-- LAYER NR. 6 -->
                     <a href="#about_yoga" class="tp-caption rev-btn pagescroll"
                          id="slide-6-layer-7"
@@ -185,14 +140,57 @@
                          data-type="button"
                          data-responsive_offset="on"
                          data-responsive="off"
-                         data-frames='[{"delay":10,"speed":2000,"frame":"0","from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","to":"o:1;","ease":"Power2.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"nothing"},{"frame":"hover","speed":"600ms","ease":"Power1.easeIn","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgb(255,255,255);bg:linear-gradient(270deg, rgba(211,143,1,1) 0%, rgba(211,143,1,1) 100%);bs:solid;bw:0 0 0 0;"}]'
+                         data-frames='[{"delay":10,"speed":2000,"frame":"0","from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","to":"o:1;","ease":"Power2.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"nothing"},{"frame":"hover","speed":"600ms","ease":"Power1.easeIn","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgb(255,255,255);bg:linear-gradient(270deg, rgba(133,121,224,1) 0%, rgba(207,67,202,1) 100%);bs:solid;bw:0 0 0 0;"}]'
                          data-textAlign="['inherit','inherit','inherit','inherit']"
                          data-paddingtop="[10,10,10,10]"
                          data-paddingright="[25,25,25,25]"
                          data-paddingbottom="[10,10,10,10]"
                          data-paddingleft="[25,25,25,25]"
-                         style="z-index: 7; white-space: nowrap; font-size: 15px; line-height: 17px; font-weight: 100; color: #ffffff; letter-spacing:0 ;font-family:'Raleway', sans-serif;background:linear-gradient(90deg, rgba(211,143,1,1) 0%, #D38F01 100%);border-color:rgba(0,0,0,1);border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;">
+                         style="z-index: 7; white-space: nowrap; font-size: 15px; line-height: 17px; font-weight: 100; color: #ffffff; letter-spacing:0 ;font-family:'Raleway', sans-serif;background:linear-gradient(90deg, rgba(88,86,214,1) 0%, rgba(207,67,202,1) 100%);border-color:rgba(0,0,0,1);border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;">
                          Learn More</a>
+                    <!-- LAYER NR. 2 -->
+                 <!--   <div class="tp-caption   tp-resizeme"
+                         id="slide-4-layer-3"
+                         data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+                         data-y="['middle','middle','middle','middle']" data-voffset="['-78','-78','-78','-78']"
+                         data-fontsize="['24','24','24','16']"
+                         data-width="none"
+                         data-height="none"
+                         data-whitespace="nowrap"
+
+                         data-type="text"
+                         data-responsive_offset="on"
+
+                         data-frames='[{"delay":400,"speed":2500,"frame":"0","from":"z:0;rX:0;rY:0;rZ:0;sX:0.9;sY:0.9;skX:0;skY:0;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"opacity:0;","ease":"Power2.easeIn"}]'
+                         data-textAlign="['inherit','inherit','inherit','inherit']"
+                         data-paddingtop="[0,0,0,0]"
+                         data-paddingright="[0,0,0,0]"
+                         data-paddingbottom="[0,0,0,0]"
+                         data-paddingleft="[0,0,0,0]"
+
+                         style="z-index: 6; white-space: nowrap; font-size: 24px; line-height: 34px; font-weight: 300; color: #ffffff; letter-spacing: 0;font-family:'Open Sans', sans-serif;">Rue Lavender is Washingtons Premier Proposal planner</div>
+
+                    <!-- LAYER NR. 3 -->
+                    <div class="tp-caption   tp-resizeme"
+                         id="slide-4-layer-4"
+                         data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+                         data-y="['middle','middle','middle','middle']" data-voffset="['-150','-150','-150','-150']"
+                         data-fontsize="['72','72','72','50']"
+                         data-width="none"
+                         data-height="none"
+                         data-whitespace="nowrap"
+
+                         data-type="text"
+                         data-responsive_offset="on"
+
+                         data-frames='[{"delay":0,"split":"lines","splitdelay":0.05,"speed":3500,"split_direction":"forward","frame":"0","from":"y:-50px;opacity:0;","to":"o:1;","ease":"Power4.easeInOut"},{"delay":"wait","split":"lines","splitdelay":0.05,"speed":1000,"split_direction":"forward","frame":"999","to":"y:-50px;opacity:0;","ease":"Power3.easeInOut"}]'
+                         data-textAlign="['inherit','inherit','inherit','inherit']"
+                         data-paddingtop="[0,0,0,0]"
+                         data-paddingright="[0,0,0,0]"
+                         data-paddingbottom="[0,0,0,0]"
+                         data-paddingleft="[0,0,0,0]"
+
+                         style="z-index: 7; white-space: nowrap; font-size: 72px; line-height: 85px; font-weight: 500; color: #ffffff; letter-spacing: 0;font-family:'Raleway', sans-serif;">Let's plan your <br> steps to forever! </div>
                 </li>
                
             </ul>
