Background colour change

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
 <section id="services">
     
-    <div class="row no-gutters">
+    <div class="row no-gutters grey_bg">
         <div class="col-sm-12 col-lg-6 order-lg-2 overflow-hidden">
             <div class="process_image figure">
                 <img src="yoga/img/process/process1.png" alt="process image">
@@ -256,7 +256,7 @@
             </div>
         </div>
     </div>
-    <div class="row no-gutters">
+    <div class="row no-gutters grey_bg">
         <div class="col-sm-12 col-lg-6 order-lg-2 overflow-hidden">
             <div class="process_image figure">
                 <img src="yoga/img/process/process3.png" alt="process image">
