--- a/testimonials.html
+++ b/testimonials.html
@@ -129,7 +129,7 @@
 
 <section id="detail_process">
     <div class="row no-gutters">
-        <div class="col-sm-12 col-lg-6 overflow-hidden">
+        <div class="col-sm-12 col-lg-6 overflow-auto">
              <div class="process_image figure">
                 <img src="yoga/img/process/process1.png" alt="process image">
              </div>
