--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                                 <div class="form-group ">
                                     <textarea class="form-control" placeholder="Message" required rows="5" id="user_message" name="userMessage"></textarea>
                                 </div>
-                                <button type="button" class="btn btn-large btn-primary padding_button w-100 contact_btn" id="submit_btn">Say hello!</button>
+                                <button type="submit" class="btn btn-large btn-primary padding_button w-100 contact_btn" id="submit_btn">Say hello!</button>
                             </div>
                         </div>
                     </form>
