--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                 <div class="col-sm-12 col-md-8 col-lg-6 order-2 order-lg-1 pt-4 information_process">
                  
 
-                    <form id="contact-form-data" data-netlify="true" action="index.html">
+                    <form id="home page contact form" data-netlify="true" action="index.html">
                         <div class="row mt-5">
                             <div class="col-12">
                                 <div class="col-md-12 col-sm-12">
