Add analytics and SEO

--- a/gallery.html
+++ b/gallery.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <!-- Author -->
-    <meta name="author" content="Themes Industry">
+    <meta name="author" content="Yes Honey Proposals">
     <!-- description -->
-    <meta name="description" content="MegaOne is a highly creative, modern, visually stunning and Bootstrap responsive multipurpose studio and portfolio HTML5 template with 8 ready home page demos.">
+    <meta name="description" content="Let's plan your steps to forever! Rue Lavender would love to discuss planning your perfect proposal!">
     <!-- keywords -->
-    <meta name="keywords" content="Creative, modern, clean, bootstrap responsive, html5, css3, portfolio, blog, studio, templates, multipurpose, one page, corporate, start-up, studio, branding, designer, freelancer, carousel, parallax, photography, studio, masonry, grid, faq">
+    <meta name="keywords" content="Yes Honey, Yes Honey Proposals, Proposal Planning Washington, Proposal Planning Seattle, Date Planning Washington, Date Planning Seattle, Special Event Planner, Special Event Planning, Proposal Planner Washington, Proposal Planner Seattle">
     <!-- Page Title -->
-    <title>Yes Honey Proposals! || Home page</title>
+    <title>Yes Honey Proposals! || Gallery</title>
     <link rel="stylesheet" href="vendor/css/jquery.fancybox.min.css">
     <!-- Favicon -->
     <link rel="icon" href="yoga/img/favicon.ico">
@@ -26,7 +26,17 @@
     <link rel="stylesheet" href="yoga/css/owl.theme.default.min.css">
     <!-- Style Sheet -->
     <link rel="stylesheet" href="yoga/css/style.css">
-    <link rel="stylesheet" href="yoga/css/settings.css">
+    <link rel="stylesheet" href="yoga/css/settings.css">	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-96LZQPB058"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-96LZQPB058');
+	</script>
+
 
 </head>
 
