--- a/testimonials.html
+++ b/testimonials.html
@@ -13,8 +13,9 @@
     <!-- Page Title -->
     <title>Yes Honey Proposals! || Testimonials</title>
     <link rel="stylesheet" href="vendor/css/jquery.fancybox.min.css">
-    <!-- Favicon -->
-    <link rel="icon" href="yoga/img/favicon.ico">
+       <!-- Favicons -->
+  	<link href="yoga/img/favicon.png" rel="icon">
+  	<link href="yoga/img/apple-touch-icon.png" rel="apple-touch-icon">
     <!-- Bundle -->
     <link rel="stylesheet" href="vendor/css/bundle.min.css">
     <!-- Plugin Css -->
