--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,0,0]"
 
-                         style="z-index: 7; white-space: nowrap; font-size: 72px; line-height: 85px; font-weight: 500; color: #ffffff; letter-spacing: 0;font-family:'Raleway', sans-serif;">Let's plan your <br> steps to forever! </div>
+                         style="z-index: 7; white-space: nowrap; font-size: 72px; line-height: 85px; font-weight: 500; color: #ffffff; letter-spacing: 0;font-family:'Raleway', sans-serif;">Let's plan your first<br>steps to forever! </div>
                 </li>
                
             </ul>
