--- a/testimonials.html
+++ b/testimonials.html
@@ -148,7 +148,7 @@
         </div>
         <div class="col-sm-12 col-lg-6 margin-col">
             <div class="process_text wow slideInRight" data-wow-delay="900ms" data-wow-duration="0.8s" style="visibility: visible; animation-delay: 700ms; animation-name: slideInRight;">
-                <p class="colored_heading">Kiara</p><br>
+                <p class="colored_heading">Ali</p><br>
                 <p class="info info_width">"I wanted to surprise my girlfriend with a summer engagement and so I reached out to Yes Honey Proposals. Rue was so helpful in the planning process and allowing my vision come to fruition. She added touches that I didn’t even think of and had several decorations on hand that made the engagement that much more beautiful.<br><br> I could tell that she cared about our love story and implemented thoughtful and cute details to make it really special. The proposal was incredible! I would absolutely recommended Rue to anyone who wants to have their special day elevated to the next level!"</p>
             </div>
         </div>
@@ -161,7 +161,7 @@
         </div>
         <div class="col-sm-12 col-lg-6 order-lg-1 margin-col">
             <div class="process_text wow slideInLeft" data-wow-delay="900ms" data-wow-duration="0.8s" style="visibility: visible; animation-delay: 700ms; animation-name: slideInLeft;">
-                <p class="colored_heading">Brandon</p><br><br>
+                <p class="colored_heading">Kiara</p><br><br>
                 <p class="info info_width">"Yes Honey Proposals is probably the greatest gift I could have possibly given my girlfriend on her birthday (which is now also our relationship anniversary date). Going into this process, I had no idea what to expect. I had a minimal vision of color schemes and a few meaningful ideas. I was very impressed by Rue’s organization and thoughtfulness. She seemed very engaged, excited, and knowledgeable through every step of the process. Her suggestions were very creative and if I didn’t agree with something or passed on one of her ideas, it felt like she was understanding and eager to find a different way to meet my needs. <br><br>By far, my most pleasant part of this experience was the level of communication from Rue’s end. She responded quickly, professionally, and with a vested interest in creating a dreamy moment for me and my now girlfriend. I only had one chance to ask this amazing human being to enter into a relationship with me, and I am so happy I had Rue’s guidance. She created an aesthetic that my girlfriend still talks about to this day. The decorations, lighting, location... every last detail is so memorable for us."</p>
             </div>
         </div>
@@ -174,7 +174,7 @@
         </div>
         <div class="col-sm-12 col-lg-6 margin-col">
             <div class="process_text wow slideInRight" data-wow-delay="900ms" data-wow-duration="0.8s" style="visibility: visible; animation-delay: 700ms; animation-name: slideInRight;">
-                <p class="colored_heading">Ali</p><br><br>
+                <p class="colored_heading">Brandon</p><br><br>
                 <p class="info info_width">“I recently reached out to Rue about my Wife’s 30th birthday and was somewhat blanking about the direction I wanted to go. Within a couple hours she outlined a plan and started helping me execute an unforgettable day for the love of my life.  She sent me a to-do list, as well as things she would handle. It definitely put my mind at ease knowing I had her on my team, and she was there for every detail all the way up to the big surprise. She took the couple ideas I had and completely magnified them bigger than I could have imagined.”</p>
             </div>
         </div>
