--- a/connect.html
+++ b/connect.html
@@ -72,13 +72,13 @@
             <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="seventh nav-link before after scroll" href="#home">Home</a>
+                    <a class="seventh nav-link before after scroll" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="seventh nav-link before after scroll .about_yoga" href="#about_yoga">About</a>
+                    <a class="seventh nav-link before after scroll .about_yoga" href="index.html#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="seventh nav-link before after scroll" href="#services">Services</a>
+                    <a class="seventh nav-link before after scroll" href="index.html#services">Services</a>
                 </li>
                
             </ul>
@@ -87,14 +87,14 @@
             </div>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="seventh nav-link before after scroll" href="#portfolio_top">Gallery</a>
+                    <a class="seventh nav-link before after scroll" href="gallery.html">Gallery</a>
                 </li>
                
                 <li class="nav-item">
-                    <a class="seventh nav-link before after" href="yoga/blog.html">Testimonials</a>
+                    <a class="seventh nav-link before after" href="testimonials.html">Testimonials</a>
                 </li>
                 <li class="nav-item">
-                    <a class="seventh nav-link before after" href="yoga/contact-us.html">Connect</a>
+                    <a class="seventh nav-link before after" href="connect.html">Connect</a>
                 </li>
             </ul>
             </div>
@@ -115,7 +115,7 @@
         <nav class="navbar1">
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link scroll" href="index.html#about_yoga">About</a></li>
+            <li class="nav-item"><a class="nav-link scroll" href="index.html#about">About</a></li>
             <li class="nav-item"><a class="nav-link scroll" href="index.html#services">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
             <li class="nav-item"><a class="nav-link" href="testimonials.html">Testimonials</a></li>
