--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <a class="seventh nav-link before after scroll" href="#home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="seventh nav-link before after scroll .about_yoga" href="#about_yoga">About</a>
+                    <a class="seventh nav-link before after scroll .about_yoga" href="#about">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="seventh nav-link before after scroll" href="#services">Services</a>
@@ -117,7 +117,7 @@
         <nav class="navbar1">
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-            <li class="nav-item"><a class="nav-link scroll" href="#about_yoga">About</a></li>
+            <li class="nav-item"><a class="nav-link scroll" href="#about">About</a></li>
             <li class="nav-item"><a class="nav-link scroll" href="#services">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="/gallery.html">Gallery</a></li>
             <li class="nav-item"><a class="nav-link" href="/testimonials.html">Testimonials</a></li>
@@ -213,7 +213,7 @@
 <div class="main_content">
 
 <!-- START ABOUT SECTION  -->
-    <section id="about_yoga">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class=" col-sm-12 col-md-6 col-lg-6 img-sc">
@@ -283,147 +283,6 @@
     </div>
 </section>
 
-
-
-
-
-<!--  START TESTIMONIAL SECTION  -->
-  <!--  <section id="testimonials">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="counter-heading">
-                        <p class="colored_heading">Our Testimonials</p>
-                        <h1 class="heading_mainc margin_heading">Happy Yoga People</h1>
-                    </div>
-                </div>
-            </div>
-
-            <div class="owl-testimonial owl-carousel owl-theme ">
-                <div class="item">
-                    <div class="testimonial-box">
-                        <div class="quote_box">
-                            <i class="fas fa-quote-right quote"></i>
-                        </div>
-                        <p class="info infot_margin">Lorem ipsum dolor sit amet, consectetuer adipiscing elit diam, sed diam
-                            nonummy nibh euismod tincidunt until laoreet.</p>
-                        <div class="testimonial_img">
-                            <img src="yoga/img/testimonial1.png" alt="testimonial picture">
-                        </div>
-                        <div class="text">
-                        <p class="testimonial_name">David Raleway</p>
-                            <p class="info blue_text">Business</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div class="testimonial-box">
-                        <div class="quote_box">
-                            <i class="fas fa-quote-right quote"></i>
-                        </div>
-                        <p class="info infot_margin">Lorem ipsum dolor sit amet, consectetuer adipiscing elit diam, sed diam
-                            nonummy nibh euismod tincidunt until laoreet.</p>
-                        <div class="testimonial_img">
-                            <img src="yoga/img/testimonial2.png" alt="testimonial picture">
-                        </div>
-                        <div class="text">
-                            <p class="testimonial_name">Kate Marasisa</p>
-                            <p class="info blue_text">Illustrator</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div class="testimonial-box">
-                        <div class="quote_box">
-                            <i class="fas fa-quote-right quote"></i>
-                        </div>
-                        <p class="info infot_margin">Lorem ipsum dolor sit amet, consectetuer adipiscing elit diam, sed diam
-                            nonummy nibh euismod tincidunt until laoreet.</p>
-                        <div class="testimonial_img">
-                            <img src="yoga/img/testimonial3.png" alt="testimonial picture">
-                        </div>
-                        <div class="text">
-                            <p class="testimonial_name">Sam Hendias</p>
-                            <p class="info blue_text">Web Designer</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div class="testimonial-box">
-                        <div class="quote_box">
-                            <i class="fas fa-quote-right quote"></i>
-                        </div>
-                        <p class="info infot_margin">Lorem ipsum dolor sit amet, consectetuer adipiscing elit diam, sed diam
-                            nonummy nibh euismod tincidunt until laoreet.</p>
-                        <div class="testimonial_img">
-                            <img src="yoga/img/testimonial1.png" alt="testimonial picture">
-                        </div>
-                        <div class="text">
-                            <p class="testimonial_name">David Raleway</p>
-                            <p class="info blue_text">Business</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div class="testimonial-box">
-                        <div class="quote_box">
-                            <i class="fas fa-quote-right quote"></i>
-                        </div>
-                        <p class="info infot_margin">Lorem ipsum dolor sit amet, consectetuer adipiscing elit diam, sed diam
-                            nonummy nibh euismod tincidunt until laoreet.</p>
-                        <div class="testimonial_img">
-                            <img src="yoga/img/testimonial2.png" alt="testimonial picture">
-                        </div>
-                        <div class="text">
-                            <p class="testimonial_name">Kate Marasisa</p>
-                            <p class="info blue_text">Illustrator</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div class="testimonial-box">
-                        <div class="quote_box">
-                            <i class="fas fa-quote-right quote"></i>
-                        </div>
-                        <p class="info infot_margin">Lorem ipsum dolor sit amet, consectetuer adipiscing elit diam, sed diam
-                            nonummy nibh euismod tincidunt until laoreet.</p>
-                        <div class="testimonial_img">
-                            <img src="yoga/img/testimonial3.png" alt="testimonial picture">
-                        </div>
-                        <div class="text">
-                            <p class="testimonial_name">Sam Hendias</p>
-                            <p class="info blue_text">Web Designer</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-<!--  START YOGA BLOG SECTION -->
-   <!-- <section id="blog">
-        <div class="row">
-               <div class="col-sm-12 col-md-12 col-lg-6 order-sm-1">
-                   <div class="blog_img">
-                       <img src="yoga/img/blog_img.png" alt="Blog Image">
-                   </div>
-               </div>
-                   <div class="col-sm-12 col-md-12 col-lg-6 order-sm-2">
-                       <div class="blog_text">
-                           <p class="colored_heading">Read Our Blog</p>
-                           <h1 class="main_heading margin_heading heading_font_sm">Why Yoga Is Important</h1>
-                           <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                               labore et dolore magna aliqua. Ut enim veniam, quis nostrud elit, sed do eiusmod tempor incididunt ut.</p>
-                           <a href="yoga/blog.html" class="btn btn-large btn-primary">Read More</a>
-                       </div>
-                   </div>
-               </div>
-    </section>
 
 <!-- START CONTACT SECTION  -->
     <section id="contact">
