--- a/testimonials.html
+++ b/testimonials.html
@@ -75,7 +75,7 @@
                     <a class="seventh nav-link before after" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="seventh nav-link before after .about_yoga" href="index.html#about_yoga">About</a>
+                    <a class="seventh nav-link before after .about_yoga" href="index.html#about">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="seventh nav-link before after" href="index.html#services">Services</a>
