--- a/gallery.html
+++ b/gallery.html
@@ -75,7 +75,7 @@
                     <a class="seventh nav-link before after " href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="seventh nav-link before after  .about_yoga" href="index.html#about_yoga">About</a>
+                    <a class="seventh nav-link before after  .about_yoga" href="index.html#about">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="seventh nav-link before after " href="index.html#services">Services</a>
@@ -115,7 +115,7 @@
         <nav class="navbar1">
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="index.html#about_yoga">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html#about">About</a></li>
             <li class="nav-item"><a class="nav-link" href="index.html#services">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
             <li class="nav-item"><a class="nav-link" href="testimonials.html">Testimonials</a></li>
