--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 <div class="main_content">
 
 <!-- START ABOUT SECTION  -->
-    <section id="about">
+    <section id="about_yoga about">
         <div class="container">
             <div class="row">
                 <div class=" col-sm-12 col-md-6 col-lg-6 img-sc">
