--- a/connect.html
+++ b/connect.html
@@ -83,7 +83,7 @@
                
             </ul>
             <div class="logo">
-                <a href="index.html" class="scroll"><img src="yoga/img/logo_img.png" alt="Logo Img"></a>
+                <a href="index.html" class=""><img src="yoga/img/logo_img.png" alt="Logo Img"></a>
             </div>
             <ul class="navbar-nav">
                 <li class="nav-item">
