--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <!-- LAYERS -->
 
                     <!-- LAYER NR. 6 -->
-                    <a href="#about_yoga" class="tp-caption rev-btn pagescroll"
+                    <a href="#about" class="tp-caption rev-btn pagescroll"
                          id="slide-6-layer-7"
                          data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
                          data-y="['middle','middle','middle','middle']" data-voffset="['0','0','0','0']"
